--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "glslify-loader": "^2.0.0",
@@ -25,6 +26,10 @@
     "html-webpack-plugin": "^5.6.0",
     "image-minimizer-webpack-plugin": "^4.0.0",
     "image-webpack-loader": "^8.1.0",
+    "imagemin": "^8.0.1",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
     "imagemin-webp": "^8.0.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "imagemin-webpack-plugin": "^2.4.2",
