--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "webpack --mode=development",
     "test": "webpack --stats-error-details",
-    "build": "webpack --mode=production",
+    "build": "webpack --mode=production --stats verbose",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +18,12 @@
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
-    "file-loader": "^6.2.0",
     "glslify-loader": "^2.0.0",
     "gsap": "^3.12.5",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "image-minimizer-webpack-plugin": "^4.0.0",
     "image-webpack-loader": "^8.1.0",
     "imagemin": "^8.0.1",
     "imagemin-mozjpeg": "^10.0.0",
