--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass-loader": "^14.1.1",
     "shader-loader": "^1.3.1",
     "style-loader": "^3.3.4",
+    "vanta": "^0.5.24",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2",
