--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.39",
     "glslify-hex": "^2.1.1",
     "lil-gui": "^0.19.1",
     "three": "^0.162"
